change db ip and domain

--- a/omicx/resources/autocall-report/appsettings.json
+++ b/omicx/resources/autocall-report/appsettings.json
@@ -28,11 +28,11 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   },
   "AllowedHosts": "*",
-    "kafka": {
-      "admin": {
+  "kafka": {
+    "admin": {
       "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -111,41 +111,41 @@
     }
   },
   "Topics": {
-      "CallAggregated": "call_aggregated",
-      "CampaignStats": "Autocall.Reports.CampaignStats.Request",
-      "AutoCallHistoryRequest": "Autocall.Reports.CallHistory.Request",
-      "AgentStatusUpdated": "ASM.AgentStatus",
-      "AgentStatusHistoryRequest": "CRM.Reports.AgentStatusHistory.Request",
-      "AgentStatusHistoryExportRequest": "Report.AgentStatusHistory.ExportRequest",
-      "AutoCallCampaignCreated": "AutoCall.Campaign.CreateRequest",
-      "CampaignStatusUpdated": "Report.Campaign.StatusUpdatedRequest",
-      "CampaignStatusReportRequest" : "CRM.Report.CampaignStatusReportRequest",
-      "InteractCardCreated": "Autocall.Report.InteractCardCreated",
-      "InteractCardsStatusToProcessing": "Autocall.Report.InteractCardsStatusToProcessing",
-      "InteractCardCompleted": "AutoCall.InteractCard.UpdateToSuccessStatus",
-      "InteractCardsCancelled": "CancelInteractCardCrm",
-      "InteractCardStatusUpdated": "Report.InteractCard.StatusUpdatedRequest",
-      "InteractCardStatsReportRequest": "CRM.Report.InteractCardsStatsReportRequest",
-      "HourlyAggregationTrigger": "Report.Trigger.Hourly",
-      "DailyAggregationTrigger": "Report.Trigger.Daily",
-      "MonthlyAggregationTrigger": "Report.Trigger.Monthly",
-      "YearlyAggregationTrigger": "Report.Trigger.Yearly",
-      "LatestBusinessOutcomeCodeResponse": "Crm.SetupBusinessOutcome.GetResponse",
-      "SuccessfulConnectionReportRequest": "CRM.Report.SuccessfulConnectionReportRequest",
-      "SpinPercentageReportRequest": "CRM.Report.SpinPercentageReportRequest",
-      "ContactImportStatsReportRequest": "CRM.Report.ContactImportStatsReportRequest",
-      "ContactsImportedResult": "Autocall.Report.ContactsImportedResult",
-      "CallNumberByCampaignReportRequest": "CRM.Report.CallNumberByCampaignReportRequest",
-      "SuccessfulCallsByCampaignReportRequest": "CRM.Report.SuccessfulCallsByCampaignReportRequest",
-      "CallsByOutcomeCodeReportRequest": "CRM.Report.CallsByOutcomeCodeReportRequest",
-      "CallsByStatusReportRequest": "CRM.Report.CallsByStatusReportRequest",
-      "InteractCardStatusByCampaignReportRequest": "CRM.Report.InteractCardStatusByCampaignReportRequest",
-      "CallByContactReferenceReportRequest" : "CRM.Report.CallByContactReferenceReportRequest",
-      "DialingStatusAndAgentStatusReportRequest": "CRM.Report.DialingStatusAndAgentStatusReportRequest"
+    "CallAggregated": "call_aggregated",
+    "CampaignStats": "Autocall.Reports.CampaignStats.Request",
+    "AutoCallHistoryRequest": "Autocall.Reports.CallHistory.Request",
+    "AgentStatusUpdated": "ASM.AgentStatus",
+    "AgentStatusHistoryRequest": "CRM.Reports.AgentStatusHistory.Request",
+    "AgentStatusHistoryExportRequest": "Report.AgentStatusHistory.ExportRequest",
+    "AutoCallCampaignCreated": "AutoCall.Campaign.CreateRequest",
+    "CampaignStatusUpdated": "Report.Campaign.StatusUpdatedRequest",
+    "CampaignStatusReportRequest": "CRM.Report.CampaignStatusReportRequest",
+    "InteractCardCreated": "Autocall.Report.InteractCardCreated",
+    "InteractCardsStatusToProcessing": "Autocall.Report.InteractCardsStatusToProcessing",
+    "InteractCardCompleted": "AutoCall.InteractCard.UpdateToSuccessStatus",
+    "InteractCardsCancelled": "CancelInteractCardCrm",
+    "InteractCardStatusUpdated": "Report.InteractCard.StatusUpdatedRequest",
+    "InteractCardStatsReportRequest": "CRM.Report.InteractCardsStatsReportRequest",
+    "HourlyAggregationTrigger": "Report.Trigger.Hourly",
+    "DailyAggregationTrigger": "Report.Trigger.Daily",
+    "MonthlyAggregationTrigger": "Report.Trigger.Monthly",
+    "YearlyAggregationTrigger": "Report.Trigger.Yearly",
+    "LatestBusinessOutcomeCodeResponse": "Crm.SetupBusinessOutcome.GetResponse",
+    "SuccessfulConnectionReportRequest": "CRM.Report.SuccessfulConnectionReportRequest",
+    "SpinPercentageReportRequest": "CRM.Report.SpinPercentageReportRequest",
+    "ContactImportStatsReportRequest": "CRM.Report.ContactImportStatsReportRequest",
+    "ContactsImportedResult": "Autocall.Report.ContactsImportedResult",
+    "CallNumberByCampaignReportRequest": "CRM.Report.CallNumberByCampaignReportRequest",
+    "SuccessfulCallsByCampaignReportRequest": "CRM.Report.SuccessfulCallsByCampaignReportRequest",
+    "CallsByOutcomeCodeReportRequest": "CRM.Report.CallsByOutcomeCodeReportRequest",
+    "CallsByStatusReportRequest": "CRM.Report.CallsByStatusReportRequest",
+    "InteractCardStatusByCampaignReportRequest": "CRM.Report.InteractCardStatusByCampaignReportRequest",
+    "CallByContactReferenceReportRequest": "CRM.Report.CallByContactReferenceReportRequest",
+    "DialingStatusAndAgentStatusReportRequest": "CRM.Report.DialingStatusAndAgentStatusReportRequest"
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAudit?authSource=admin",
-    "DatabaseName": "AutocallAudit",
+    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAuditUAT?authSource=admin",
+    "DatabaseName": "AutocallAuditUAT",
     "CollectionNames": {
       "EventStreaming": "EventStreaming",
       "CallHistoryReport": "AutoCallHistory",
@@ -173,6 +173,6 @@
       "YearlyContactImportStatsReport": "YearlyContactImportStatsReport"
     }
   },
-  "RecordingPrefix": "https://crm-dev-v1.metechvn.com/file/",
+  "RecordingPrefix": "https://crm-uat-v1.metechvn.com/file/",
   "ExportExcelPath": "ExportExcel"
 }
