--- a/omicx/resources/chat-statistics/appsettings.json
+++ b/omicx/resources/chat-statistics/appsettings.json
@@ -17,11 +17,11 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   },
   "AllowedHosts": "*",
-    "kafka": {
-      "admin": {
+  "kafka": {
+    "admin": {
       "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -100,9 +100,9 @@
     }
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAudit?authSource=admin",
-    "DatabaseName": "AutocallAudit"
+    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAuditUAT?authSource=admin",
+    "DatabaseName": "AutocallAuditUAT"
   },
-  "RecordingPrefix": "https://crm-dev-v1.metechvn.com/file/",
+  "RecordingPrefix": "https://crm-uat-v1.metechvn.com/file/",
   "ExportExcelPath": "ExportExcel"
 }
