--- a/omicx/resources/email-notification/appsettings.json
+++ b/omicx/resources/email-notification/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "DomainName": "https://crm-dev-v1.metechvn.com",
+  "DomainName": "https://crm-uat-v1.metechvn.com",
   "kafka": {
     "admin": {
       "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
@@ -15,8 +15,8 @@
       "SessionTimeoutMs": 30000,
       "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
-        "enableAutoCommit": false,
-        "autoOffsetReset": "earliest",
+      "enableAutoCommit": false,
+      "autoOffsetReset": "earliest",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -33,9 +33,7 @@
     "schemaRegistry": {
       "url": "http://omicx-schema-headless:8081"
     },
-    "topics": [
-      "Omicx.TenantRegistered"
-    ]
+    "topics": ["Omicx.TenantRegistered"]
   },
   "Queues": {
     "TenantRegistration": "Omicx.TenantRegistered"
