--- a/omicx/resources/job-common/appsettings.json
+++ b/omicx/resources/job-common/appsettings.json
@@ -1,76 +1,76 @@
 {
-    "ConnectionStrings": {
-      "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
-    },
-    "App": {
-      "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
-      "ClientRootAddress": "http://localhost:4200/",
-      "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://omicx-socket-server-3000-service:3000",
-      "DefaultTenant": 4,
-      "SocketIOAddress": "http://omicx-socket-server-3000-service:3000/",
-      "ReportServiceAddress": "http://172.16.86.94:7071/",
-      "DomainName": "crm-dev-v2.metechvn.com",
-      "SocialConfigurationLocal": "http://omicx-social-configurations-7980-service:7980/api/v1/",
-      "ExportExcelPath": "ExportExcel"
-    },
-    "Email": {
-      "Host": "mail.metechvn.com",
-      "Port": 587,
-      "AccountName": "GROVE CRM",
-      "Account": "grove@metechvn.com",
-      "Password": "Metech@123!@#"
-    },
-    "Elasticsearch": {
-      "ConnectionStrings": "http://elasticsearch-host:9200",
-      "Username": "elastic",
-      "Password": "Metech123",
-      "SyncDataBatch": 1000
-    },
-    "Authentication": {
-      "JwtBearer": {
-        "IsEnabled": "true",
-        "SecurityKey": "adminJob_C421AAEE0D114E9C",
-        "Issuer": "adminJob",
-        "Audience": "adminJob"
+  "ConnectionStrings": {
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
+  },
+  "App": {
+    "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
+    "ClientRootAddress": "http://localhost:4200/",
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://omicx-socket-server-3000-service:3000",
+    "DefaultTenant": 4,
+    "SocketIOAddress": "http://omicx-socket-server-3000-service:3000/",
+    "ReportServiceAddress": "http://172.16.86.94:7071/",
+    "DomainName": "crm-uat-v2.metechvn.com",
+    "SocialConfigurationLocal": "http://omicx-social-configurations-7980-service:7980/api/v1/",
+    "ExportExcelPath": "ExportExcel"
+  },
+  "Email": {
+    "Host": "mail.metechvn.com",
+    "Port": 587,
+    "AccountName": "GROVE CRM",
+    "Account": "grove@metechvn.com",
+    "Password": "Metech@123!@#"
+  },
+  "Elasticsearch": {
+    "ConnectionStrings": "http://elasticsearch-host:9200",
+    "Username": "elastic",
+    "Password": "Metech123",
+    "SyncDataBatch": 1000
+  },
+  "Authentication": {
+    "JwtBearer": {
+      "IsEnabled": "true",
+      "SecurityKey": "adminJob_C421AAEE0D114E9C",
+      "Issuer": "adminJob",
+      "Audience": "adminJob"
+    }
+  },
+  "McPortal": {
+    "Url": "http://sit-mcportal.mcredit.com.vn/mcService/service/v1.0/authorization",
+    "Username": "metech.cc",
+    "Password": "P>F@5N$X",
+    "TimeToLiveHrs": 6
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:9703/"
       }
+    }
+  },
+  "Socket": {
+    "Url": "http://omicx-socket-server-3000-service:3000"
+  },
+  "kafka": {
+    "admin": {
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "ScramSha512",
+      "saslUsername": "kafka-admin",
+      "saslPassword": "Metech123"
     },
-    "McPortal": {
-      "Url": "http://sit-mcportal.mcredit.com.vn/mcService/service/v1.0/authorization",
-      "Username": "metech.cc",
-      "Password": "P>F@5N$X",
-      "TimeToLiveHrs": 6
-    },
-    "Kestrel": {
-      "Endpoints": {
-        "Http": {
-          "Url": "http://0.0.0.0:9703/"
-        }
-      }
-    },
-    "Socket": {
-      "Url": "http://omicx-socket-server-3000-service:3000"
-    },
-    "kafka": {
-      "admin": {
-        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-        "securityProtocol": "SaslPlaintext",
-        "saslMechanism": "ScramSha512",
-        "saslUsername": "kafka-admin",
-        "saslPassword": "Metech123"
-      },
-      "consumer": {
-        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-        "groupId": "omicxJobCommon",
-        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-        "securityProtocol": "SaslPlaintext",
-        "saslMechanism": "ScramSha512",
-        "saslUsername": "kafka-admin",
-        "saslPassword": "Metech123",
-        "enableAutoCommit": false,
-        "sessionTimeoutMs": 120000,
-        "autoOffsetReset": "earliest",
-        "requestResponseConsumer": {
+    "consumer": {
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "groupId": "omicxJobCommon",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "ScramSha512",
+      "saslUsername": "kafka-admin",
+      "saslPassword": "Metech123",
+      "enableAutoCommit": false,
+      "sessionTimeoutMs": 120000,
+      "autoOffsetReset": "earliest",
+      "requestResponseConsumer": {
         "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
@@ -81,95 +81,95 @@
         "enableAutoCommit": false,
         "sessionTimeoutMs": 120000,
         "autoOffsetReset": "earliest"
-        },
-        "consumeOnlyConsumer": {
-          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-          "groupId": "omicxJobCommon",
-          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-          "securityProtocol": "SaslPlaintext",
-          "saslMechanism": "ScramSha512",
-          "saslUsername": "kafka-admin",
-          "saslPassword": "Metech123",
-          "enableAutoCommit": false,
-          "sessionTimeoutMs": 120000,
-          "autoOffsetReset": "earliest"
-        }
       },
-      "producer": {
+      "consumeOnlyConsumer": {
         "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+        "groupId": "omicxJobCommon",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
         "saslUsername": "kafka-admin",
-        "saslPassword": "Metech123"
-      },
-      "schemaRegistry": {
-        "url": "http://omicx-schema-headless:8081"
-      },
-      "topics": [
-        "Report.AutoCallHistory.ExportResponse",
-        "Report.CallsPerAgentStats.ExportResponse",
-        "CRM.CampaignSurvey.ExportCustomerRequest",
-        "CRM.UserImportExcel",
-        "CRM.SendMultipleMailToAgent",
-        "Omicx.InteractCard.UnAssign",
-        "Omicx.InteractCard.ExportExcelRequest",
-        "Report.AgentStatusHistory.ExportRequest",
-        "Report.AgentStatusHistory.ExportResponse",
-        "Report.CallInboundByQueue.ExportRequest",
-        "Report.CallInboundByQueue.ExportResponse",
-        "Report.DataSourceStats.ExportRequest",
-        "Report.DataSourceStats.ExportResponse",
-        "Report.InboundCallHistory.ExportRequest",
-        "Report.InboundCallHistory.ExportResponse",
-        "Report.InteractCardList.ExportRequest",
-        "Report.InteractCardList.ExportResponse",
-        "Report.OutboundCallHistory.ExportRequest",
-        "Report.OutboundCallHistory.ExportResponse",
-        "SendBusinessOutcome",
-        "Crm.InteractCard.UpdateOutcomeCode",
-        "Report.CallByContactReference.ExportRequest",
-        "Report.CallByContactReference.ExportResponse",
-        "Report.CallByOutcomeCode.ExportRequest",
-        "Report.CallByOutcomeCode.ExportResponse",
-        "Report.CallByStatus.ExportRequest",
-        "Report.CallByStatus.ExportResponse",
-        "Report.CallNumbersByCampaign.ExportRequest",
-        "Report.CallNumbersByCampaign.ExportResponse",
-        "Report.DialingStatusAndAgentStatus.ExportRequest",
-        "Report.DialingStatusAndAgentStatus.ExportResponse",
-        "Report.InteractCardStatusByCampaign.ExportRequest",
-        "Report.InteractCardStatusByCampaign.ExportResponse",
-        "Report.SuccessfulCallsByCampaign.ExportRequest",
-        "Report.SuccessfulCallsByCampaign.ExportResponse",
-        "CRM.ExtendedAllOutboundCallHistory.ExportRequest",
-        "CRM.ExtendedAllOutboundCallHistory.ExportResponse",
-        "Report.ExtendedAllOutboundCallHistory.ExportRequest",
-        "Report.ExtendedAllOutboundCallHistory.ExportResponse",
-        "CRM.UserExportExcel",
-        "CRM.ChatConversationHistory.ExportRequest",
-		"Report.ChatConversationHistory.ExportRequest",
-        "Report.CallInboundByQueue.ExportResponse",
-        "Report.AllOutboundCallHistory.ExportResponse",
-        "Report.CallHistory.ExportResponse",
-        "Report.InboundCallHistory.ExportResponse",
-        "Report.OutboundCallHistory.ExportResponse",
-		"Report.ChatConversationHistory.ExportResponse"
-      ]
+        "saslPassword": "Metech123",
+        "enableAutoCommit": false,
+        "sessionTimeoutMs": 120000,
+        "autoOffsetReset": "earliest"
+      }
     },
-    "Quartz": {
-      "SchedulerName": "Job-Common-Scheduler",
-      "SchedulerId": "1",
-      "TablePrefix": "QRTZ_"
+    "producer": {
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "ScramSha512",
+      "saslUsername": "kafka-admin",
+      "saslPassword": "Metech123"
     },
-    "Tickets": {
-      "MissFromCallTitleId": 23
+    "schemaRegistry": {
+      "url": "http://omicx-schema-headless:8081"
     },
-    "RedisCache": {
-      "ConnectionString": "redis-host:6379,password=Metech123,SyncTimeout=60000",
-      "DatabaseId":  0
-    },
-    "Contacts": {
-      "NumberItemPerPageExport": 1000
-    }
+    "topics": [
+      "Report.AutoCallHistory.ExportResponse",
+      "Report.CallsPerAgentStats.ExportResponse",
+      "CRM.CampaignSurvey.ExportCustomerRequest",
+      "CRM.UserImportExcel",
+      "CRM.SendMultipleMailToAgent",
+      "Omicx.InteractCard.UnAssign",
+      "Omicx.InteractCard.ExportExcelRequest",
+      "Report.AgentStatusHistory.ExportRequest",
+      "Report.AgentStatusHistory.ExportResponse",
+      "Report.CallInboundByQueue.ExportRequest",
+      "Report.CallInboundByQueue.ExportResponse",
+      "Report.DataSourceStats.ExportRequest",
+      "Report.DataSourceStats.ExportResponse",
+      "Report.InboundCallHistory.ExportRequest",
+      "Report.InboundCallHistory.ExportResponse",
+      "Report.InteractCardList.ExportRequest",
+      "Report.InteractCardList.ExportResponse",
+      "Report.OutboundCallHistory.ExportRequest",
+      "Report.OutboundCallHistory.ExportResponse",
+      "SendBusinessOutcome",
+      "Crm.InteractCard.UpdateOutcomeCode",
+      "Report.CallByContactReference.ExportRequest",
+      "Report.CallByContactReference.ExportResponse",
+      "Report.CallByOutcomeCode.ExportRequest",
+      "Report.CallByOutcomeCode.ExportResponse",
+      "Report.CallByStatus.ExportRequest",
+      "Report.CallByStatus.ExportResponse",
+      "Report.CallNumbersByCampaign.ExportRequest",
+      "Report.CallNumbersByCampaign.ExportResponse",
+      "Report.DialingStatusAndAgentStatus.ExportRequest",
+      "Report.DialingStatusAndAgentStatus.ExportResponse",
+      "Report.InteractCardStatusByCampaign.ExportRequest",
+      "Report.InteractCardStatusByCampaign.ExportResponse",
+      "Report.SuccessfulCallsByCampaign.ExportRequest",
+      "Report.SuccessfulCallsByCampaign.ExportResponse",
+      "CRM.ExtendedAllOutboundCallHistory.ExportRequest",
+      "CRM.ExtendedAllOutboundCallHistory.ExportResponse",
+      "Report.ExtendedAllOutboundCallHistory.ExportRequest",
+      "Report.ExtendedAllOutboundCallHistory.ExportResponse",
+      "CRM.UserExportExcel",
+      "CRM.ChatConversationHistory.ExportRequest",
+      "Report.ChatConversationHistory.ExportRequest",
+      "Report.CallInboundByQueue.ExportResponse",
+      "Report.AllOutboundCallHistory.ExportResponse",
+      "Report.CallHistory.ExportResponse",
+      "Report.InboundCallHistory.ExportResponse",
+      "Report.OutboundCallHistory.ExportResponse",
+      "Report.ChatConversationHistory.ExportResponse"
+    ]
+  },
+  "Quartz": {
+    "SchedulerName": "Job-Common-Scheduler",
+    "SchedulerId": "1",
+    "TablePrefix": "QRTZ_"
+  },
+  "Tickets": {
+    "MissFromCallTitleId": 23
+  },
+  "RedisCache": {
+    "ConnectionString": "redis-host:6379,password=Metech123,SyncTimeout=60000",
+    "DatabaseId": 0
+  },
+  "Contacts": {
+    "NumberItemPerPageExport": 1000
+  }
 }
