--- a/omicx/resources/job-email/appsettings.json
+++ b/omicx/resources/job-email/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
   },
   "App": {
     "ServerRootAddress": "http://omicx-job-email-9903-service:9903/",
@@ -51,16 +51,16 @@
       "sessionTimeoutMs": 30000,
       "autoOffsetReset": "earliest",
       "requestResponseConsumer": {
-      "clientId": "CRM-JOB",
-      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-      "securityProtocol": "SaslPlaintext",
-      "saslMechanism": "ScramSha512",
-      "saslUsername": "kafka-admin",
-      "saslPassword": "Metech123",
-      "groupId": "omicxJobEmail",
-      "enableAutoCommit": false,
-      "autoOffsetReset": "earliest"
+        "clientId": "CRM-JOB",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+        "securityProtocol": "SaslPlaintext",
+        "saslMechanism": "ScramSha512",
+        "saslUsername": "kafka-admin",
+        "saslPassword": "Metech123",
+        "groupId": "omicxJobEmail",
+        "enableAutoCommit": false,
+        "autoOffsetReset": "earliest"
       },
       "consumeOnlyConsumer": {
         "clientId": "CRM-JOB",
@@ -96,4 +96,3 @@
     "MissFromCallTitleId": 23
   }
 }
-    
