--- a/omicx/resources/job-message/appsettings.json
+++ b/omicx/resources/job-message/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
   },
   "App": {
     "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
@@ -30,28 +30,28 @@
     "Url": "http://omicx-socket-server-3000-service:3000"
   },
   "kafka": {
-      "admin": {
+    "admin": {
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "saslMechanism": "ScramSha512",
+      "saslPassword": "Metech123",
+      "saslUsername": "kafka-admin",
+      "securityProtocol": "SaslPlaintext"
+    },
+    "consumer": {
+      "consumeOnlyConsumer": {
+        "autoOffsetReset": "earliest",
         "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+        "clientId": "omicxJobMessage",
+        "enableAutoCommit": false,
+        "groupId": "omicxJobMessage",
         "saslMechanism": "ScramSha512",
         "saslPassword": "Metech123",
         "saslUsername": "kafka-admin",
-        "securityProtocol": "SaslPlaintext"
-      },
-      "consumer": {
-        "consumeOnlyConsumer": {
-          "autoOffsetReset": "earliest",
-          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-          "clientId": "omicxJobMessage",
-          "enableAutoCommit": false,
-          "groupId": "omicxJobMessage",
-          "saslMechanism": "ScramSha512",
-          "saslPassword": "Metech123",
-          "saslUsername": "kafka-admin",
-          "securityProtocol": "SaslPlaintext",
-          "sessionTimeoutMs": 30000
-        }
+        "securityProtocol": "SaslPlaintext",
+        "sessionTimeoutMs": 30000
       }
-    },
+    }
+  },
   "Job": {
     "ChatJob": {
       "ExportDir": "/tmp/chat_histories"
