--- a/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
@@ -12,7 +12,7 @@ upstream author_service_host  {
 server                  {
 
         listen                          80;
-        server_name crm-dev-v1.metechvn.com www.crm-dev-v1.metechvn.com;
+        server_name crm-uat-v1.metechvn.com www.crm-uat-v1.metechvn.com;
         client_max_body_size 100M;
         location / {
                 proxy_pass              http://web_front_host;
