--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -4,7 +4,7 @@ upstream web_front_v2_host {
 
 server                  {
         listen                          80;
-        server_name crm-dev-v2.metechvn.com www.crm-dev-v2.metechvn.com;
+        server_name crm-uat-v2.metechvn.com www.crm-uat-v2.metechvn.com;
         client_max_body_size 100M;
         location / {
                 proxy_pass              http://web_front_v2_host;
