--- a/omicx/resources/sync-tracker/appsettings.json
+++ b/omicx/resources/sync-tracker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:9788/",
