--- a/omicx/resources/sync-worker/appsettings.json
+++ b/omicx/resources/sync-worker/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:9766/",
     "ClientRootAddress": "http://localhost:4200/",
     "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000",
-	"SocketIOAddress": "http://omicx-socket-server-3000-service:3000/"
+    "SocketIOAddress": "http://omicx-socket-server-3000-service:3000/"
   },
   "Elasticsearch": {
     "ConnectionStrings": "http://elasticsearch-host:9200",
@@ -58,9 +58,7 @@
     "schemaRegistry": {
       "url": "http://omicx-schema-headless:8081/"
     },
-    "topics": [
-      "Omicx.DynamicEntity.SyncRequest"
-    ]
+    "topics": ["Omicx.DynamicEntity.SyncRequest"]
   },
   "Swagger": {
     "ShowSummaries": false
