--- a/omicx/resources/tenant-registration/appsettings.json
+++ b/omicx/resources/tenant-registration/appsettings.json
@@ -1,15 +1,15 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "ConfigurationServer": {
-        "Address": "http://localhost:7099"
+    "Address": "http://localhost:7099"
   },
   "MongoDb": {
-        "ConnectionString": "mongodb://root:Metech123@chat-db:27017"
+    "ConnectionString": "mongodb://root:Metech123@chat-db:27017"
   },
   "App": {
-    "DomainContextSuffix" : "metechvn.com",
+    "DomainContextSuffix": "metechvn.com",
     "ClientRootAddress": "http://localhost:4200/",
     "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000",
     "RootPathChatWidget": "http://172.16.88.109:8080/js/"
