--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "App": {
     "SyncConnectionString": false,
@@ -9,8 +9,8 @@
     "FreeSwitchBaseUrl": "https://ai.metechvn.com/",
     "FreeSwitchManagerApi": "http://omicx-cci-5580-service:5580",
     "ServerRootAddress": "http://172.16.16.110:21021/",
-    "ClientRootAddress": "https://crm-dev-v1.metechvn.com/",
-    "CorsOrigins": "https://crm-dev-v1.metechvn.com,https://crm-dev-v2.metechvn.com,http://localhost:8080,http://localhost:8081,http://localhost:3000",
+    "ClientRootAddress": "https://crm-uat-v1.metechvn.com/",
+    "CorsOrigins": "https://crm-uat-v1.metechvn.com,https://crm-uat-v2.metechvn.com,http://localhost:8080,http://localhost:8081,http://localhost:3000",
     "RootPathChatWidget": "http://172.16.88.109:8080/js/",
     "SocketIO": "http://omicx-socket-server-3000-service:3000/",
     "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
@@ -18,7 +18,7 @@
     "RecordingUrl": "http://172.16.88.109:9600/",
     "FileUrl": "http://172.16.88.109:8080/",
     "UrlAudio": "http://172.16.88.109:8080/recording/",
-    "PrefixAudioUrl": "https://crm-dev-v1.metechvn.com/file/",
+    "PrefixAudioUrl": "https://crm-uat-v1.metechvn.com/file/",
     "ReportingService": "http://172.16.86.94:7071/",
     "ACDBackendUrl": "http://omicx-acd-backend-3006-service:3006/",
     "ChatManagerLocal": "http://omicx-channel-manager-5001-service:5001/",
@@ -29,7 +29,7 @@
     "ExportExcelPath": "ExportExcel",
     "SocialConfigurationLocal": "http://omicx-social-configurations-7980-service:7980/api/v1",
     "UrlAcdAsmEmail": "http://omicx-acd-asm-email-7990-service:7990/",
-    "DomainName": "crm-dev-v2.metechvn.com"
+    "DomainName": "crm-uat-v2.metechvn.com"
   },
   "Conversation": {
     "AutoCloseInMinutes": 1440
@@ -40,11 +40,11 @@
     "Password": "Metech123"
   },
   "McPortal": {
-      "Url": "http://mcportal.mcredit.com.vn/mcService/service/v1.0/authorization",
-      "Username": "metech.cc",
-      "Password": "P>F@5N$X",
-      "TimeToLiveHrs": 6
-    },
+    "Url": "http://mcportal.mcredit.com.vn/mcService/service/v1.0/authorization",
+    "Username": "metech.cc",
+    "Password": "P>F@5N$X",
+    "TimeToLiveHrs": 6
+  },
   "Integration": {
     "F88": {
       "AuthUrl": "https://api-sit.f88.co/auth/main"
@@ -67,16 +67,16 @@
   },
   "RedisCache": {
     "ConnectionString": "redis-host:6379,password=Metech123",
-    "DatabaseId":  0
+    "DatabaseId": 0
   },
-    "PaymentGateway": {
+  "PaymentGateway": {
     "VNPAY": {
       "VNP_VERSION": "2.1.0",
       "VNP_TMNCODE": "G1SPD20Q",
       "VNP_HASH_SECRET": "RDFCTOOLCKPINSPNEGIAXXDXBBLDSRGG",
       "VNP_URL": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-      "VNP_RETURN_URL": "https://crm-dev-v1.metechvn.com/tenant/vnpay-return",
-      "VNP_REDIRECT": "https://crm-dev-v1.metechvn.com/tenant/register/"
+      "VNP_RETURN_URL": "https://crm-uat-v1.metechvn.com/tenant/vnpay-return",
+      "VNP_REDIRECT": "https://crm-uat-v1.metechvn.com/tenant/register/"
     }
   },
   "kafka": {
@@ -100,16 +100,16 @@
       "sessionTimeoutMs": 30000,
       "autoOffsetReset": "earliest",
       "requestResponseConsumer": {
-      "clientId": "CRM",
-      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-      "groupId": "omicxCRM",
-      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-      "securityProtocol": "SaslPlaintext",
-      "saslMechanism": "ScramSha512",
-      "saslUsername": "kafka-admin",
-      "saslPassword": "Metech123",
-      "enableAutoCommit": false,
-      "autoOffsetReset": "latest"
+        "clientId": "CRM",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+        "groupId": "omicxCRM",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+        "securityProtocol": "SaslPlaintext",
+        "saslMechanism": "ScramSha512",
+        "saslUsername": "kafka-admin",
+        "saslPassword": "Metech123",
+        "enableAutoCommit": false,
+        "autoOffsetReset": "latest"
       },
       "consumeOnlyConsumer": {
         "clientId": "CRM",
@@ -250,28 +250,28 @@
       "Omicx.Tenant.Migration.Request",
       "GetListBusinessOutcomes",
       "Omicx.Campaign.ClearFileImport",
-	  "Autocall.Campaign.ClearByFileId.Request",
-	  "Autocall.Campaign.ClearByFileId.Cleared",
-	  "Autocall.Campaign.ClearByStatus.Request",
-	  "Autocall.Campaign.ClearByStatus.Cleared",
-	  "Omicx.InteractCard.Assign.Request",
-	  "Omicx.InteractCard.AssignByFilter.Request",
+      "Autocall.Campaign.ClearByFileId.Request",
+      "Autocall.Campaign.ClearByFileId.Cleared",
+      "Autocall.Campaign.ClearByStatus.Request",
+      "Autocall.Campaign.ClearByStatus.Cleared",
+      "Omicx.InteractCard.Assign.Request",
+      "Omicx.InteractCard.AssignByFilter.Request",
       "AutoCall.Campaign.CreateResponse",
       "AutoCall.Campaign.CreateRequest",
       "CrmCloud.Campaign.ImportExcel.NormalizeRequest",
-	  "CrmCloud.Campaign.ImportExcel.Normalized",
+      "CrmCloud.Campaign.ImportExcel.Normalized",
       "Autocall.InteractCard.Skip.Response",
       "Autocall.InteractCard.Skip.Request",
       "Report.InteractCard.LastCall"
     ]
   },
-    "ExportExcel": {
-      "Requests": {
-        "EmailReport": "CrmCloud.ExportExcel.EmailReportRequest",
-        "Customer": "CrmCloud.ExportExcel.CustomerRequest",
-        "Contact": "CrmCloud.ExportExcel.ContactRequest",
-        "TeamEmailPerformanceReport": "CrmCloud.ExportExcel.TeamEmailPerformanceReportRequest",
-        "Ticket": "CrmCloud.ExportExcel.TicketRequest"
-      }
-   }   
+  "ExportExcel": {
+    "Requests": {
+      "EmailReport": "CrmCloud.ExportExcel.EmailReportRequest",
+      "Customer": "CrmCloud.ExportExcel.CustomerRequest",
+      "Contact": "CrmCloud.ExportExcel.ContactRequest",
+      "TeamEmailPerformanceReport": "CrmCloud.ExportExcel.TeamEmailPerformanceReportRequest",
+      "Ticket": "CrmCloud.ExportExcel.TicketRequest"
+    }
+  }
 }
