--- a/omicx/resources/authorization-service/appsettings.json
+++ b/omicx/resources/authorization-service/appsettings.json
@@ -1,29 +1,53 @@
 {
-    "ConnectionStrings": {
-      "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
-    },
-    "App": {
-      "ServerRootAddress": "http://localhost:21021/",
-      "ClientRootAddress": "http://localhost:4200/",
-      "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
-    },
-    "Authentication": {
-      "JwtBearer": {
-        "ExpirationInSeconds": "7200",
-        "IsEnabled": "true",
-        "SecurityKey": "Admin_C421AAEE0D114E9C",
-        "Issuer": "Admin",
-        "Audience": "Admin"
-      }
-    },
-    "Integration": {
-      "F88": {
-        "AuthUrl": "https://api-ida.f88.co/auth/main",
-        "RecordingS3BaseUrl": "https://api-ld-pn.f88.co:6891/File/SignUrl"
-      }
-    },
-    "kafka": {
-      "consumer": {
+  "ConnectionStrings": {
+    "Default": "Server=crm-db; Database=crm.uat.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+  "App": {
+    "ServerRootAddress": "http://localhost:21021/",
+    "ClientRootAddress": "http://localhost:4200/",
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+  },
+  "Authentication": {
+    "JwtBearer": {
+      "ExpirationInSeconds": "7200",
+      "IsEnabled": "true",
+      "SecurityKey": "Admin_C421AAEE0D114E9C",
+      "Issuer": "Admin",
+      "Audience": "Admin"
+    }
+  },
+  "Integration": {
+    "F88": {
+      "AuthUrl": "https://api-ida.f88.co/auth/main",
+      "RecordingS3BaseUrl": "https://api-ld-pn.f88.co:6891/File/SignUrl"
+    }
+  },
+  "kafka": {
+    "consumer": {
+      "clientId": "AuthorizationService",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "groupId": "AuthorizationService",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "ScramSha512",
+      "saslUsername": "kafka-admin",
+      "saslPassword": "Metech123",
+      "enableAutoCommit": false,
+      "sessionTimeoutMs": 30000,
+      "autoOffsetReset": "earliest",
+      "requestResponseConsumer": {
+        "clientId": "AuthorizationService",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+        "securityProtocol": "SaslPlaintext",
+        "saslMechanism": "ScramSha512",
+        "saslUsername": "kafka-admin",
+        "saslPassword": "Metech123",
+        "groupId": "AuthorizationService",
+        "enableAutoCommit": false,
+        "autoOffsetReset": "earliest"
+      },
+      "consumeOnlyConsumer": {
         "clientId": "AuthorizationService",
         "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "groupId": "AuthorizationService",
@@ -33,61 +57,37 @@
         "saslUsername": "kafka-admin",
         "saslPassword": "Metech123",
         "enableAutoCommit": false,
-        "sessionTimeoutMs": 30000,
-        "autoOffsetReset": "earliest",
-        "requestResponseConsumer": {
-          "clientId": "AuthorizationService",
-          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-          "securityProtocol": "SaslPlaintext",
-          "saslMechanism": "ScramSha512",
-          "saslUsername": "kafka-admin",
-          "saslPassword": "Metech123",
-          "groupId": "AuthorizationService",
-          "enableAutoCommit": false,
-          "autoOffsetReset": "earliest"
-        },
-        "consumeOnlyConsumer": {
-          "clientId": "AuthorizationService",
-          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-          "groupId": "AuthorizationService",
-          "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-          "securityProtocol": "SaslPlaintext",
-          "saslMechanism": "ScramSha512",
-          "saslUsername": "kafka-admin",
-          "saslPassword": "Metech123",
-          "enableAutoCommit": false,
-          "autoOffsetReset": "earliest"
-        }
-      },
-      "producer": {
-        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
-        "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
-        "securityProtocol": "SaslPlaintext",
-        "saslMechanism": "ScramSha512",
-        "saslUsername": "kafka-admin",
-        "saslPassword": "Metech123"
-      },
-      "schemaRegistry": {
-        "url": "http://omicx-schema-headless:8081"
-      },
-      "requestTimeout": 120000,
-      "produceTopics": {
-        "systemForceLogout": "CRM.System.ForceLogout"
-      },
-      "consumeTopics": {
-        "socketAgentStatus": "Notification.Socket.AgentStatus"
+        "autoOffsetReset": "earliest"
       }
     },
-    "RedisCache": {
-      "ConnectionString": "redis-host:6379,password=Metech123",
-      "DatabaseId": 0
+    "producer": {
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
+      "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
+      "securityProtocol": "SaslPlaintext",
+      "saslMechanism": "ScramSha512",
+      "saslUsername": "kafka-admin",
+      "saslPassword": "Metech123"
     },
-    "Kestrel": {
-      "Endpoints": {
-        "Http": {
-          "Url": "http://0.0.0.0:21021/"
-        }
+    "schemaRegistry": {
+      "url": "http://omicx-schema-headless:8081"
+    },
+    "requestTimeout": 120000,
+    "produceTopics": {
+      "systemForceLogout": "CRM.System.ForceLogout"
+    },
+    "consumeTopics": {
+      "socketAgentStatus": "Notification.Socket.AgentStatus"
+    }
+  },
+  "RedisCache": {
+    "ConnectionString": "redis-host:6379,password=Metech123",
+    "DatabaseId": 0
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:21021/"
       }
     }
   }
+}
