--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -36,7 +36,7 @@ global:
     - ip: "169.1.30.77"
       hostnames:
         - "elasticsearch-host"
-    - ip: "10.10.10.36"
+    - ip: "10.10.10.37"
       hostnames:
         - "postgresql-host"
 
@@ -190,7 +190,7 @@ deployments:
         SLEEP_MS: 1000
         PBX_INSTANCES: 10.10.10.35,8021,ClueCon,103.141.141.59:5080|external
         PORT: "5580"
-        RECORD_URL_PREFIX: https://crm-dev-v1.metechvn.com/file
+        RECORD_URL_PREFIX: https://crm-uat-v1.metechvn.com/file
         URL_CALL_CENTER: http://10.10.10.35:5590
         IP_GATEWAY: "8ab65d17-7d16-4971-91b5-60035cd13340"
         ENCRYPT_SENSITIVE_KEY: "01234567896868686868012345678968"
@@ -380,7 +380,7 @@ deployments:
     envs:
       secret: {}
       config:
-        DB_URI: mongodb://root:Abcd12345@chat-db:27017/AutocallAudit?authSource=admin
+        DB_URI: mongodb://root:Abcd12345@chat-db:27017/AutocallAuditUAT?authSource=admin
         ENABLE_DOCUMENTATION: "true"
         ENABLE_ORM_LOGS: "true"
         LOG_LEVEL: info
@@ -832,7 +832,7 @@ deployments:
         KAFKA_AUTHENTICATION_TIMEOUT: 60000
         KAFKA_SASL_USERNAME: kafka-admin
         KAFKA_SASL_PASSWORD: Metech123
-        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager?authSource=admin"
+        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager-uat?authSource=admin"
         GRPC_URL_CONNECTION: "0.0.0.0:6868"
         REDIS_IP: redis-host
         REDIS_PORT: 6379
@@ -879,7 +879,7 @@ deployments:
         FACEBOOK_CONNECTOR_URL: omicx-acd-facebook-connector-7979-service:7878
         NOTIFICATION_SERVER_URL: http://omicx-socket-server-3000-service:3000
         EMAIL_CONNECTOR_URL: omicx-acd-email-connector-8001-service:8000
-        DB_URI: mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager?authSource=admin
+        DB_URI: mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager-uat?authSource=admin
         KAFKA_BROKER: kafka-0:9092,kafka-1:9092,kafka-2:9092
         KAFKA_REGISTRY: http://omicx-schema-headless:8081/
         KAFKA_GROUP_ID: ACD_BACKEND_CHAT
@@ -924,7 +924,7 @@ deployments:
       config:
         GRPC_URL_CONNECTION: "0.0.0.0:6972"
         GRPC_URL_PACKAGE: "com.metech.acd"
-        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager?authSource=admin"
+        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager-uat?authSource=admin"
         GRPC_URL_CONNECTION_ACD_ASM: "omicx-acd-asm-chat-6970-service:6973"
         GRPC_URL_CONNECTION_ACD_ASM_EMAIL: "omicx-acd-asm-email-7990-service:7991"
     volumeMounts: {}
@@ -1038,12 +1038,12 @@ deployments:
         KAFKA_AUTHENTICATION_TIMEOUT: 60000
         KAFKA_SASL_USERNAME: kafka-admin
         KAFKA_SASL_PASSWORD: Metech123
-        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager?authSource=admin"
+        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager-uat?authSource=admin"
         GRPC_URL_CONNECTION: "0.0.0.0:7878"
         REDIS_IP: redis-host
         REDIS_PORT: "6379"
         REDIS_PASSWORD: "Metech123"
-        SOCIAL_URL: "https://crm-dev-v1.metechvn.com/static/socials"
+        SOCIAL_URL: "https://crm-uat-v1.metechvn.com/static/socials"
         GRPC_URL_SOCIAL_CONFIGURATION: "omicx-social-configurations-7980-service:7989"
     volumeMounts:
       - mountPath: /public
@@ -1076,7 +1076,7 @@ deployments:
     envs:
       secret: {}
       config:
-        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager?authSource=admin"
+        DATABASE_URI: "mongodb://root:Abcd12345@chat-db:27017/omicx-channel-manager-uat?authSource=admin"
         REDIS_IP: redis-host
         REDIS_PORT: "6379"
         REDIS_PASSWORD: "Metech123"
@@ -1092,7 +1092,7 @@ deployments:
         EMAIL_FETCH_STATUS_TOPIC: ACD.Email.FetchStatus
         GCLOUD_CLIENT_SECRET: "U2FsdGVkX1+0nd7NokbkobnxbfK0IyDkIfCzeWpCWxQtn8djQpauhPl01aQOes9+5IenGh1rrdJqA179tW2Y7A=="
         AZURE_CLIENT_SECRET: "U2FsdGVkX18/cZVE0GCt1CxwkOjaB9S3JfSJSC3fre4qjqshENuKOIpogI73qsmfzLra8fKP6DzA2AJuLkfZYA=="
-        OAUTH2_REDIRECT_URL: https://crm-dev-v1.metechvn.com/api/v1/email/oauth2
+        OAUTH2_REDIRECT_URL: https://crm-uat-v1.metechvn.com/api/v1/email/oauth2
     volumeMounts: {}
     volumes: {}
     service:
@@ -1335,7 +1335,7 @@ deployments:
         TENANT_CHANGED_STATUS_TOPIC: Omicx.TenantChangedStatus
         TENANT_RESET_PASSWORD: CRM.ResetAdminPassword
         EMAIL_SENDING_TOPIC: ACD.Email.Sending
-        DOMAIN_NAME: https://crm-dev-v1.metechvn.com
+        DOMAIN_NAME: https://crm-uat-v1.metechvn.com
         SOCIAL_NOTIFICATION_URL: http://omicx-social-configurations-7980-service:7980/api/v1
         KAFKA_ENABLED: true
         KAFKA_BOOTSTRAP_SERVERS: "kafka-0:9092,kafka-1:9092,kafka-2:9092"
