change image path

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -716,8 +716,8 @@ deployments:
         cpu: 125m
         memory: 16Mi
   - name: frontend-v2
-    customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
-    pullPolicy: IfNotPresent
+    customImage: docker-registry.metechvn.com/uat/omicx/frontend-v2
+    pullPolicy: Always
     tag: "latest"
     replicaCount: 1
     routePath: /
