Updates file values.yaml with 2fe0fa94 in deployment: frontend-v2

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -718,7 +718,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/uat/omicx/frontend-v2
     pullPolicy: Always
-    tag: "latest"
+    tag: '2fe0fa94'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
