--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -645,9 +645,9 @@ deployments:
         cpu: 125m
         memory: 64Mi
   - name: web-be
-    image: backend
+    customImage: docker-registry.metechvn.com/dev/omicx-v2/backend
     pullPolicy: IfNotPresent
-    tag: "cabea146"
+    tag: "latest"
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
