add kafka config

--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -718,7 +718,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
     pullPolicy: IfNotPresent
-    tag: 'e032de9b'
+    tag: 'latest'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
@@ -1440,6 +1440,10 @@ deployments:
         DB_USERNAME: omicxadmin
         DB_PASSWORD: Abc@123@345&*^
         DB_NAME: ticket-service
+        KAFKA_BROKERS: kafka-0:9092
+        KAFKA_SASL_USERNAME: kafka-admin
+        KAFKA_SASL_PASSWORD: Metech123
+        KAFKA_SASL_MECHANISM: sha512
     volumeMounts: {}
     volumes: {}
     service:
