--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -1029,7 +1029,7 @@ deployments:
   - name: acd-facebook-connector
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-facebook-connector
     pullPolicy: Always
-    tag: "latest"
+    tag: '1aaa19c9'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
