--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -718,7 +718,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
     pullPolicy: IfNotPresent
-    tag: "a5ba6d3d"
+    tag: '43ff7a77'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
